--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/lodash": "^4.14.179",
     "clsx": "^1.1.1",
     "lodash": "^4.17.21",
+    "mqtt": "^4.3.7",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
