--- a/package.json
+++ b/package.json
@@ -36,9 +36,11 @@
     "@types/node": "17.0.21",
     "@types/react": "17.0.39",
     "babel-loader": "^8.2.3",
+    "buffer": "^6.0.3",
     "css-loader": "^6.6.0",
     "eslint": "8.10.0",
     "eslint-config-next": "12.1.0",
+    "process": "^0.11.10",
     "sass-loader": "^12.6.0",
     "style-loader": "^3.3.1",
     "typescript": "4.5.5",
