--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@svgr/webpack": "^6.2.1",
     "@types/node": "17.0.21",
     "@types/react": "17.0.39",
+    "assert": "^2.0.0",
     "babel-loader": "^8.2.3",
     "buffer": "^6.0.3",
     "css-loader": "^6.6.0",
