--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-markdown": "^8.0.0",
+    "react-spinners": "^0.11.0",
     "sass": "^1.49.9"
   },
   "devDependencies": {
