--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   },
   "dependencies": {
     "@types/lodash": "^4.14.179",
+    "@types/node-forge": "^1.0.2",
     "clsx": "^1.1.1",
     "lodash": "^4.17.21",
     "mqtt": "^4.3.7",
     "next": "12.1.0",
+    "node-forge": "^1.3.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-markdown": "^8.0.0",
